added bgm and click sound

--- a/Readme
+++ b/Readme
@@ -1,3 +1,4 @@
 Portfolio website for myself.
 Credits @vraj2811 for the idea and design.
 Hosted on Github Pages.
+Favicon credits: Captivate icons created by NajmunNahar - Flaticon [https://www.flaticon.com/free-icons/captivate]"
